# MyTemplates

./: .gitignore  README.md
my_playwright_template/: Makefile  README.md  pyproject.toml
my_playwright_template/docker/: Dockerfile
my_playwright_template/tests/: test_health.py
