[tool.poetry]
name = "playwright_template"
version = "0.0.1"
description = "Base template repo for UI tests with playwright"
authors = ["kayakimenkov@gamil.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.41.2"
pytest = "^8.0.1"
pytest-playwright = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
